// Copyright (c) Ultraviolet
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package agent;

option go_package = "./agent";

service AgentService {
  rpc Algo(AlgoRequest) returns (AlgoResponse) {}
  rpc Data(DataRequest) returns (DataResponse) {}
  rpc Result(ResultRequest) returns (ResultResponse) {}
  rpc Attestation(AttestationRequest) returns (AttestationResponse) {}
}

message AlgoRequest {
  bytes algorithm = 1;
  string provider = 2;
  string id = 3;
}

message AlgoResponse {}

message DataRequest {
  bytes dataset = 1;
  string provider = 2;
  string id = 3;
}

message DataResponse {}

message ResultRequest {
  string consumer = 1;
}

message ResultResponse {
  bytes file = 1;
}

message AttestationRequest {
  bytes report_data = 1; // Should be of length 64.
}

message AttestationResponse {
  bytes file = 1;
}
